<resources>
    <string name="app_name">ConfApp</string>
    <string name="buttonAddition">+</string>
    <string name="buttonSubstraction">-</string>
    <string name="buttonEquals">=</string>
    <string name="buttonOne">1</string>
    <string name="buttonTwo">2</string>
    <string name="buttonThree">3</string>
    <string name="buttonZero">0</string>
    <string name="buttonFour">4</string>
    <string name="resultOutPut">0.0</string>
    <string name="buttonC">C</string>
    <string name="buttonSix">6</string>
    <string name="buttonFive">5</string>
    <string name="buttonSeven">7</string>
    <string name="buttonNine">9</string>
    <string name="buttonEight">8</string>
    <string name="buttonDivision">/</string>
    <string name="buttonX">X</string>
</resources>